[#46 #48] Add error log message to adapters and Implement get_all_links()
[#86] Implement reindex() in all AtomDB adapters
[HOTFIX] Add 'type' in documents returned by get_atom()
[#84] Add delete_atom method in the InMemoryDB adapter
[#85] Add delete_atom method in the RedisMongoDB adapter
[#96] Adjust retrieve methods for sets in Redis - incoming_set, templates, patterns
[#98] Refactor get_incoming_links() in all AtomDB adapters