@@ -5,3 +5,4 @@
 [#85] Add delete_atom method in the RedisMongoDB adapter
 [#96] Adjust retrieve methods for sets in Redis - incoming_set, templates, patterns
 [#98] Refactor get_incoming_links() in all AtomDB adapters
+[#102] Update get_matched_links(), get_matched_type_template() e get_matched_type()
